k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: procurement
  labels:
    name: procurement
    environment: production
